--- a/index.html
+++ b/index.html
@@ -8,9 +8,160 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar"></div>
-        <div class="header"></div>
-        <div class="main"></div>
+        <div class="sidebar">
+            <div class="sidebar-up">
+                <a href="#"><img src="./icons/view-dashboard.svg" alt="dashboard icon">Dashboard</a>
+            </div>
+            <div class="sidebar-middle">
+                <ul>
+                    <li><a href="#"><img src="./icons/home.svg" alt="home icon">Home</a></li>
+                    <li><a href="#"><img src="./icons/card-account-details-outline.svg" alt="profile icon">Profile</a></li>
+                    <li><a href="#"><img src="./icons/message-reply.svg" alt="message icon">Messages</a></li>
+                    <li><a href="#"><img src="./icons/clock-time-three.svg" alt="history icon">History</a></li>
+                    <li><a href="#"><img src="./icons/note-multiple.svg" alt="task icon">Tasks</a></li>
+                    <li><a href="#"><img src="./icons/account-group.svg" alt="communities icon">Communities</a></li>
+                </ul>
+            </div>
+            <div class="sidebar-down">
+                <ul>
+                    <li><a href="#"><img src="./icons/cog.svg" alt="cog icon">Settings</a></li>
+                    <li><a href="#"><img src="./icons/help-box.svg" alt="help icon">Support</a></li>
+                    <li><a href="#"><img src="./icons/shield-check.svg" alt="check icon">Privacy</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="header">
+            <div class="top-left">
+                <img src="./icons/magnify.svg" alt="search icon">
+                <input type="text">
+            </div>
+            <div class="top-right">
+                <img src="./icons/bell-ring-outline.svg" alt="bell icon">
+                <div class="avatar"></div>
+                Morgan Oakley
+            </div>
+            <div class="bottom-left">
+                <div class="avatar big"></div>
+                <div class="text">
+                    <div class="upper">Hi there,</div>
+                    <div class="lower">Morgan Oakley (@morgan)</div>
+                </div>
+            </div>
+            <div class="bottom-right">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+        <div class="main">
+            <div class="left">
+                <div class="title">Your Projects</div>
+                <div class="wrapper" id="main">
+                    <div class="projects">
+                        <h3>Super Cool Project</h3>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                        <div class="icons">
+                            <img src="./icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./icons/source-fork.svg" alt="source icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Less Cool Project</h3>
+                        <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+                        <div class="icons">
+                            <img src="./icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./icons/source-fork.svg" alt="source icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Impossible App</h3>
+                        <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+                        <div class="icons">
+                            <img src="./icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./icons/source-fork.svg" alt="source icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Easy Peasy App</h3>
+                        <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                        <div class="icons">
+                            <img src="./icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./icons/source-fork.svg" alt="source icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Ad Blocker</h3>
+                        <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+                        <div class="icons">
+                            <img src="./icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./icons/source-fork.svg" alt="source icon">
+                        </div>
+                    </div>
+                    <div class="projects">
+                        <h3>Money Maker</h3>
+                        <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pallentesque mollis nec sem vel aliquam.</p>
+                        <div class="icons">
+                            <img src="./icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./icons/source-fork.svg" alt="source icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="title">Announcements</div>
+                <div class="wrapper" id="announcements">
+                    <div class="announcements">
+                        <h4>Site Maintenance</h4>
+                        <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</p>
+                    </div>
+                    <div class="announcements">
+                        <h4>Community Share Day</h4>
+                        <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</p>
+                    </div>
+                    <div class="announcements">
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
+                    </div>
+                </div>
+                <div class="title">Trending</div>
+                <div class="wrapper" id="trending">
+                    <div class="trending">
+                        <div class="avatar trav-1"></div>
+                        <div class="text">
+                            <div class="upper">@tegan</div>
+                            <div class="lower">World Peace Builder</div>
+                        </div>
+                    </div>
+                    <div class="trending">
+                        <div class="avatar trav-2"></div>
+                        <div class="text">
+                            <div class="upper">@morgan</div>
+                            <div class="lower">Super Cool Project</div>
+                        </div>
+                    </div>
+                    <div class="trending">
+                        <div class="avatar trav-3"></div>
+                        <div class="text">
+                            <div class="upper">@kendall</div>
+                            <div class="lower">Life Changing App</div>
+                        </div>
+                    </div>
+                    <div class="trending">
+                        <div class="avatar trav-4"></div>
+                        <div class="text">
+                            <div class="upper">@alex</div>
+                            <div class="lower">No Traffic Maker</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
